--- a/All-Topics/HTML/form.html
+++ b/All-Topics/HTML/form.html
@@ -8,7 +8,7 @@
 <body>
     
     <table>
-        <h1>Welcome to LensLife with Bhupesh</h1>
+        <!-- <h1>Welcome to LensLife with Bhupesh</h1> -->
         <tr>
             <td>
                 <label for="username">username</label>
