--- a/All-Topics/HTML/form.html
+++ b/All-Topics/HTML/form.html
@@ -8,10 +8,10 @@
 <body>
     
     <table>
-        <!-- <h1>Welcome to LensLife with Bhupesh</h1> -->
+        <h1>Welcome to LensLife with Bhupesh</h1>
         <tr>
             <td>
-                <label for="username">username</label>
+                <!-- <label for="username">username</label> -->
             </td>
             <td>
                 <input type="text" name="username" id="">
