--- a/All-Topics/HTML/form.html
+++ b/All-Topics/HTML/form.html
@@ -14,13 +14,13 @@
                 <label for="username">username</label>
             </td>
             <td>
-                <!-- <input type="text" name="username" id=""> -->
+                <input type="text" name="username" id="">
             </td>
             
         </tr>
         <tr>
             <td>
-                <label for="password">Password</label>
+                <!-- <label for="password">Password</label> -->
             </td>
             <td>
                 <input type="password" name="password" id="">
