--- a/All-Topics/HTML/form.html
+++ b/All-Topics/HTML/form.html
@@ -20,10 +20,10 @@
         </tr>
         <tr>
             <td>
-                <!-- <label for="password">Password</label> -->
+                <label for="password">Password</label>
             </td>
             <td>
-                <input type="password" name="password" id="">
+                <!-- <input type="password" name="password" id=""> -->
             </td>
         </tr>
         <tr>
