--- a/All-Topics/HTML/form.html
+++ b/All-Topics/HTML/form.html
@@ -23,7 +23,7 @@
                 <label for="password">Password</label>
             </td>
             <td>
-                <!-- <input type="password" name="password" id=""> -->
+                <input type="password" name="password" id="">
             </td>
         </tr>
         <tr>
