--- a/PROJECTS/portfolio-website/index.html
+++ b/PROJECTS/portfolio-website/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website - John Doe</title>
+    <title>Portfolio Website - Bhupesh Joshi</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -14,8 +14,8 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo-container">
-                    <img src="./images/userAsset/NavLogo.jpg" class="logo" />
-                    <div class="logo-text">ohn Doe</div>
+                    <img src="./images/B.png" class="logo" />
+                    <div class="logo-text">hupesh Joshi</div>
                 </div>
 
                 <div class="nav-items">
@@ -26,7 +26,7 @@
             </div>
 
             <div class="hero-section">
-                <div class="faded-text">John Doe</div>
+                <div class="faded-text">Bhupesh Joshi</div>
 
                 <div class="hero-section-left">
                     <div class="hero-section-heading">Hi! John Doe</div>
