--- a/All-Topics/HTML/html-4.html
+++ b/All-Topics/HTML/html-4.html
@@ -12,8 +12,8 @@
     </section>
 
     <h1>Anchor Tag</h1>
-    <!-- <a href="" target="_blank">url</a> -->
-    <a href="tel:+918192827237">Call</a>
+    <a href="" target="_blank">url</a>
+    <!-- <a href="tel:+918192827237">Call</a> -->
     <a href="mailto:bhupeshj323@gmail.com">Mail</a>
 
     <section id="third_sec">Section 2</section>
