--- a/All-Topics/HTML/html-4.html
+++ b/All-Topics/HTML/html-4.html
@@ -16,7 +16,7 @@
     <a href="tel:+918192827237">Call</a>
     <a href="mailto:bhupeshj323@gmail.com">Mail</a>
 
-    <!-- <section id="third_sec">Section 2</section> -->
+    <section id="third_sec">Section 2</section>
 
     <section id="third_sec">Section 3</section>
 </body>
