--- a/PROJECTS/portfolio-website/index.html
+++ b/PROJECTS/portfolio-website/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="wrapper">
+
         <div class="container">
             <div class="navbar">
                 <div class="logo-container">
@@ -66,7 +67,7 @@
             </div>
         </div>
 
-        <div class="project-section">
+        <div class="project-section" id="projects">
             <h2 class="page-header">Projects</h2>
 
             <div class="project-container">
@@ -259,6 +260,58 @@
                 <img class="skills-logo" src="./images/stack/Vercel.svg" alt="" />
             </div>
         </div>
+
+        <div class="contactus-form-container" id="contactme">
+            <div class="container">
+
+                <h2 class="contactus-heading">Contact Me</h2>
+                <h3 class="contactus-subheading">Questions, thoughts or just want to say hello?</h3>
+
+                <div class="contactus-form-container">
+                    <form action="">
+                        <div class="formfield-container">
+                            <input class="formfield" type="text" name="name" id="" placeholder="Enter your name" />
+                            <input class="formfield" type="email" name="email" id="" placeholder="Enter your email address" />
+                            <input class="formfield" type="text" name="subject" id="" placeholder="Enter your subject" />
+                            <textarea name="message" id="" cols="30" rows="10" class="formfield formfield-textarea" placeholder="Enter your message"></textarea>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn-pink" id="submit-btn">Send Message <i class="submit-icon fa-solid fa-paper-plane"></i></button>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+
+        <footer>
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div class="footer-faded-text">Bhupesh Joshi</div>
+                    <div class="link-wrapper">
+                        <div>
+                            <a href="#projects">Projects</a>
+                        </div>
+                        <div>
+                            <a href="#skills">Skills</a>
+                        </div>
+                        <div>
+                            <a href="#contactme">Contact Me</a>
+                        </div>
+                    </div>
+
+                    <div class="icon-wrapper">
+                        <i class="fa-brands fa-linkedin icon"></i>
+                        <i class="fa-brands fa-github icon"></i>
+                        <i class="fa-brands fa-twitter icon"></i>
+                        <i class="fa-brands fa-instagram icon"></i>
+                        <i class="fa-regular fa-envelope icon"></i>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
