--- a/All-Topics/HTML/hw-2-table.html
+++ b/All-Topics/HTML/hw-2-table.html
@@ -8,7 +8,7 @@
 
     <style>
         table {
-            border-collapse: collapse;
+            /* border-collapse: collapse; */
         }
     </style>
 </head>
