--- a/All-Topics/HTML/hw-2-table.html
+++ b/All-Topics/HTML/hw-2-table.html
@@ -8,13 +8,13 @@
 
     <style>
         table {
-            /* border-collapse: collapse; */
+            border-collapse: collapse;
         }
     </style>
 </head>
 
 <body>
-    <table border="1" , border-collapse="collapse">
+    <!-- <table border="1" , border-collapse="collapse"> -->
 
         <colgroup>
             <col span="" style="background-color: red;">
