--- a/All-Topics/HTML/hw-2-table.html
+++ b/All-Topics/HTML/hw-2-table.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- <table border="1" , border-collapse="collapse"> -->
+    <table border="1" , border-collapse="collapse">
 
         <colgroup>
             <col span="" style="background-color: red;">
