--- a/All-Topics/CSS/boxModel/boxModel.html
+++ b/All-Topics/CSS/boxModel/boxModel.html
@@ -9,13 +9,13 @@
         .box{
             height: 100px;
             width: 200px;
-            /* border: 2px solid black; */
+            border: 2px solid black;
             margin: 10px;
             padding: 10px;
         }
 
         #org {
-            background-color: orange;
+            /* background-color: orange; */
         }
 
         #wht {
