--- a/All-Topics/CSS/Shadows/text-shadow.html
+++ b/All-Topics/CSS/Shadows/text-shadow.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>text-shadow</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <title>text-shadow</title> -->
 
     <link rel="stylesheet" href="text-shadow.css">
 
