--- a/All-Topics/CSS/Shadows/text-shadow.html
+++ b/All-Topics/CSS/Shadows/text-shadow.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>text-shadow</title> -->
+    <title>text-shadow</title>
 
-    <link rel="stylesheet" href="text-shadow.css">
+    <!-- <link rel="stylesheet" href="text-shadow.css"> -->
 
 </head>
 <body>
