portfolio website start

--- a/All-Topics/CSS/position-property/absolute/absolute.html
+++ b/All-Topics/CSS/position-property/absolute/absolute.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>position-property</title>
-    <!-- <link rel="stylesheet" href="position-property.css"> -->
+    <link rel="stylesheet" href="position-property.css">
 
     <style>
 
 
 div {
-    display: inline-block;
+    /* display: inline-block; */
     width: 150px;
     height: 150px;
     background-color: red;
