--- a/All-Topics/CSS/position-property/absolute/absolute.html
+++ b/All-Topics/CSS/position-property/absolute/absolute.html
@@ -12,8 +12,8 @@
 div {
     display: inline-block;
     width: 150px;
-    /* height: 150px; */
-    background-color: red;
+    height: 150px;
+    /* background-color: red; */
     border: 1px solid black;
 }
 
