contact us section done

--- a/All-Topics/CSS/position-property/absolute/absolute.html
+++ b/All-Topics/CSS/position-property/absolute/absolute.html
@@ -14,7 +14,7 @@ div {
     width: 150px;
     height: 150px;
     background-color: red;
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
 #box3 {
@@ -29,7 +29,7 @@ div {
 </head>
 <body>
 
-    <div id="box1">A</div>
+    <!-- <div id="box1">A</div> -->
     <div id="box2">B</div>
     <div id="box3">C</div>
     <div id="box4">D</div>
