footer section done

--- a/All-Topics/CSS/position-property/absolute/absolute.html
+++ b/All-Topics/CSS/position-property/absolute/absolute.html
@@ -29,8 +29,8 @@ div {
 </head>
 <body>
 
-    <!-- <div id="box1">A</div> -->
-    <div id="box2">B</div>
+    <div id="box1">A</div>
+    <!-- <div id="box2">B</div> -->
     <div id="box3">C</div>
     <div id="box4">D</div>
     
