razorpay feature section done

--- a/All-Topics/CSS/position-property/absolute/absolute.html
+++ b/All-Topics/CSS/position-property/absolute/absolute.html
@@ -19,7 +19,7 @@ div {
 
 #box3 {
     position: absolute;
-    top: 50px;
+    /* top: 50px; */
     left: 50px;
     background-color: aqua;
 }
@@ -32,7 +32,7 @@ div {
     <div id="box1">A</div>
     <div id="box2">B</div>
     <div id="box3">C</div>
-    <!-- <div id="box4">D</div> -->
+    <div id="box4">D</div>
     
 </body>
 </html>
