razorpay experience people section done

--- a/PROJECTS/RazorPay-website/index.html
+++ b/PROJECTS/RazorPay-website/index.html
@@ -166,8 +166,8 @@
 
         <!--feature section - 1-->
         <section class="relative mt-[190px] overflow-hidden">
-            <!-- <img src="./images/feature-section1-dottedrows.png" loading="lazy" -->
-                class="w-[233px] h-[167] absolute -top-[8rem] left-[10rem] inline-block" />
+            <img src="./images/feature-section1-dottedrows.png" loading="lazy"
+                <!-- class="w-[233px] h-[167] absolute -top-[8rem] left-[10rem] inline-block" /> -->
 
             <img src="./images/feature-section1-dottedrows.png" loading="lazy"
                 class="w-[233px] h-[167] absolute -top-[3rem] right-0 rotate-180" />
