--- a/PROJECTS/RazorPay-website/index.html
+++ b/PROJECTS/RazorPay-website/index.html
@@ -167,9 +167,9 @@
         <!--feature section - 1-->
         <section class="relative mt-[190px] overflow-hidden">
             <img src="./images/feature-section1-dottedrows.png" loading="lazy"
-                <!-- class="w-[233px] h-[167] absolute -top-[8rem] left-[10rem] inline-block" /> -->
+                class="w-[233px] h-[167] absolute -top-[8rem] left-[10rem] inline-block" />
 
-            <img src="./images/feature-section1-dottedrows.png" loading="lazy"
+            <!-- <img src="./images/feature-section1-dottedrows.png" loading="lazy" -->
                 class="w-[233px] h-[167] absolute -top-[3rem] right-0 rotate-180" />
 
             <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
