razorpay footer section other done

--- a/PROJECTS/RazorPay-website/index.html
+++ b/PROJECTS/RazorPay-website/index.html
@@ -170,7 +170,7 @@
                 class="w-[233px] h-[167] absolute -top-[8rem] left-[10rem] inline-block" />
 
             <img src="./images/feature-section1-dottedrows.png" loading="lazy"
-                <!-- class="w-[233px] h-[167] absolute -top-[3rem] right-0 rotate-180" /> -->
+                class="w-[233px] h-[167] absolute -top-[3rem] right-0 rotate-180" />
 
             <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
                 <!-- heading -->
