--- a/PROJECTS/RazorPay-website/index.html
+++ b/PROJECTS/RazorPay-website/index.html
@@ -172,7 +172,7 @@
             <img src="./images/feature-section1-dottedrows.png" loading="lazy"
                 class="w-[233px] h-[167] absolute -top-[3rem] right-0 rotate-180" />
 
-            <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4">
+            <!-- <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4"> -->
                 <!-- heading -->
                 <h2 class="font-mullish text-center text-2xl leading-[1.2] font-extrabold">
                     Accept Payments with Razorpay Payment Suite
